test/sema/typeck/trait/self-unknown-assoc-type.dora
trait Foo {
    fn make() {
        Self::Unknown::method()
    }
}
